// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkCalendar should render correctly 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly for selectionType={'multiple'} 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="multiple"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly for selectionType={'range'} 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="range"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly for selectionType={'single'} 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with arbitrary props 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
  testID="123"
/>
`;

exports[`Android BpkCalendar should render correctly with both minDate and maxDate 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={1589846400}
  minDate={1558224000}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with color buckets 1`] = `
<AndroidBPKCalendarView
  colorBuckets={
    Array [
      Object {
        "color": -3084564,
        "days": Object {
          "dates": Array [
            1576627200,
          ],
          "type": "before",
        },
        "textStyle": undefined,
      },
      Object {
        "color": -3062949,
        "days": Object {
          "dates": Array [
            1576627200,
          ],
          "type": "after",
        },
        "textStyle": "dark",
      },
    ]
  }
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with custom style 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`Android BpkCalendar should render correctly with disabled dates 1`] = `
<AndroidBPKCalendarView
  disabledDates={
    Object {
      "dates": Array [
        1576454400,
      ],
      "type": "after",
    }
  }
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with footerView 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  footerView={
    Object {
      "__type": "highlightedDays",
      "days": Array [
        Object {
          "date": 1576627200,
          "description": "Test day",
        },
      ],
    }
  }
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with maxDate 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={1589846400}
  minDate={null}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with minDate 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={1558224000}
  onChange={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with selection type "multiple" and selected dates 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={
    Array [
      1558224000,
      1558396800,
    ]
  }
  selectionType="multiple"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with selection type "range" and selected dates 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={
    Array [
      1558224000,
      1558396800,
    ]
  }
  selectionType="range"
  style={null}
/>
`;

exports[`Android BpkCalendar should render correctly with selection type "single" and selected dates 1`] = `
<AndroidBPKCalendarView
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onChange={[Function]}
  selectedDates={
    Array [
      1558224000,
    ]
  }
  selectionType="single"
  style={null}
/>
`;
